Update home page

--- a/frontend/music-lib/src/App.css
+++ b/frontend/music-lib/src/App.css
@@ -6,7 +6,7 @@
 }
 
 body {
-    background: linear-gradient(to top, #222742, #131313);
+    background: linear-gradient(to top, #2d1414, #131313);
     min-height: 100vh;
 }
 
